# AI-Incident-Commander

./: .gitignore
docs/: PRD.md  architecture.md  implementation-spec.md  milestones.md  project_context.md  repository-structure.md  sprint-1-backlog.md  tech-decisions.md
infra/docker/compose/: .env.example  (+1 more)
services/ingestion-service/: pyproject.toml  requirements.txt
services/ingestion-service/src/ingestion_service/: main.py
services/ingestion-service/src/ingestion_service/api/: dependencies.py
services/ingestion-service/src/ingestion_service/api/routes/: logs.py  webhooks.py
services/ingestion-service/src/ingestion_service/application/ports/: event_publisher.py
services/ingestion-service/src/ingestion_service/application/use_cases/: ingest_alert.py  ingest_logs.py
services/ingestion-service/src/ingestion_service/infrastructure/messaging/: kafka_event_publisher.py
services/ingestion-service/src/ingestion_service/infrastructure/normalizers/: __init__.py  datadog.py  pagerduty.py  prometheus.py
services/ingestion-service/tests/unit/: test_log_ingest_use_case.py  test_pii_masker.py
shared/python/: alembic.ini  pyproject.toml
shared/python/common/domain/: __init__.py  models.py
shared/python/common/sanitization/: __init__.py  pii_masker.py
shared/python/common/schemas/: __init__.py  alert_event.py  enums.py  event_envelope.py  incident_event.py  log_event.py
shared/python/config/: settings.py
shared/python/messaging/: __init__.py  kafka_producer.py  topics.py
shared/python/migrations/: env.py
shared/python/migrations/versions/: 0001_initial_schema.py  README
(+6 files in other folders)
