[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aic-shared"
version = "0.1.0"
description = "Shared libraries for AI Incident Commander"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "confluent-kafka>=2.6",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg2-binary>=2.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["common*", "config*", "messaging*"]
